2012-12-10: Add automatic switching to log scale for regular plots as well as
            cdf plots. For regular plots, data differing by more than a factor
            of 20 triggers log scaling.

2012-12-10: Add rtt_fair test.

2012-12-10: Fix spurious error when running netperf-wrapper with a test name
            that is also an existing file name (that is, make the error message
            intelligible).

2012-12-09: Automatically switch CDF plots to log scale if the median values
            differ by more than an order of magnitude.

2012-12-09: Support multiple -i options to combine several result sets into one
            table/set of plots. Basically, reading in multiple data sets by
            supplying -i multiple times on the command line now plots them all
            together; this does not work well for all plots, but for some it
            does. Differentiating between the data sets is done by the title
            (set with -t) of the result sets (i.e. -t must be supplied when the
            data set is generated).

2012-12-09: Put custom (-t) plot titles on the same line as the plot name
            (otherwise the title overlaps the plot area for plots exported to
            file).

2012-12-09: Handle errors on data file open better.

2012-12-09: Add rrul46compete test.

2012-12-07: Release v0.2.0.

2012-12-07: Merge compatibility fixes with py3k. Should now work with python
            versions from 2.6 to 3.3.

2012-12-07: Fix compatibility with python2.6.

2012-12-06: Fix to avoid interpolation artefacts at start/end of data series.