@@ -1,3 +1,5 @@
+2012-12-10: Add option to turn off annotation on plots (--no-annotation).
+
 2012-12-10: Add automatic switching to log scale for regular plots as well as
             cdf plots. For regular plots, data differing by more than a factor
             of 20 triggers log scaling.
